[tool.poetry]
name = "keepassx-tools"
version = "0.1.0"
license = "BSD-3-Clause"
description = "Toolset for taking automated actions on KeePass databases (v3.x/v4.x)"
authors = ["David Alexander <opensource@thelonelyghost.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pykeepass = "^3.0"
pwnedapi = "^1.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
keepassxc-pwned = 'keepassx_tools.cli.check:main'
keepassx-pwned = 'keepassx_tools.cli.check:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
